Add styles for the navbar and the hero section

--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abstract</title>
+    <link rel="shortcut icon" href="../public/images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="./output.css">
 </head>
+
 <body>
-    
+    <header>
+        <nav class="py-4 px-32  bg-black flex justify-between">
+            <div class="text-xl text-white flex flex-row items-center gap-2">
+                <img class="h-8 w-32" src="../public/images/abstract.svg" alt="abstract">
+                |
+                <a class="" href="#">Help Center</a>
+            </div>
+            <div class="flex gap-6">
+                <button class="text-xl border-white border-2 rounded-lg p-3 text-white bg-gray-900">Submit a request</button>
+                <button class="text-xl rounded-lg p-3 text-white bg-blue-900">Sign in</button>
+            </div>
+        </nav>
+
+
+        <!-- Hero Section -->
+        <div class="h-96 p-28 flex gap-12 flex-col bg-[#dadbf1]">
+            <h1 class="text-7xl text-center">How can we help?</h1>
+            <div class="text-center">
+                <input class="p-4 w-2/5 border-blue-900 border-2 rounded-lg" type="text" name="help-text" id="" placeholder="Search">
+            </div>
+        </div>
+    </header>
+    <main>
+        <div>
+
+
+            <!-- Component -->
+            <div>
+                <div>
+                    <img src="../public/images/icon-versions.png" alt="icon-versions">
+                    <div>
+                        <h2>Using Abstract</h2>
+                        <p>Abstract lets you manage, version, and document your designs in one place.</p>
+                        <a href="#">Learn More &RightArrow;</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+    <footer>
+        <div>
+            <h3>Abstract</h3>
+            <a href="#">Start Trial</a>
+            <a href="#">Pricing</a>
+            <a href="#">Download</a>
+        </div>
+        <div>
+            <h3>Abstract</h3>
+            <a href="#">Start Trial</a>
+            <a href="#">Pricing</a>
+            <a href="#">Download</a>
+            <h3>Contact Us</h3>
+            <a href="#">info@abstract.com</a>
+        </div>
+        <div>
+            <img src="../public/images/abstract.svg" alt="abstract">
+            <p>&copy; Copyright 2024</p>
+            <p>Abstract Studio Design, Inc.</p>
+            <p>All rights reserved</p>
+        </div>
+        <button>
+            <!-- <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;">
+                <path
+                    d="M12 4C9.243 4 7 6.243 7 9h2c0-1.654 1.346-3 3-3s3 1.346 3 3c0 1.069-.454 1.465-1.481 2.255-.382.294-.813.626-1.226 1.038C10.981 13.604 10.995 14.897 11 15v2h2v-2.009c0-.024.023-.601.707-1.284.32-.32.682-.598 1.031-.867C15.798 12.024 17 11.1 17 9c0-2.757-2.243-5-5-5zm-1 14h2v2h-2z">
+                </path>
+            </svg> -->
+            Help
+        </button>
+    </footer>
 </body>
+
 </html>
