--- a/src/index.html
+++ b/src/index.html
@@ -32,18 +32,69 @@
             </div>
         </div>
     </header>
-    <main>
-        <div>
+    <main class="flex justify-center content-center py-44 px-48">
+        <!-- <div class="flex flex-row flex-wrap w-10/12"> -->
+        <div class="grid grid-cols-2 gap-y-20 gap-x-24">
 
-
-            <!-- Component -->
-            <div>
-                <div>
-                    <img src="../public/images/icon-versions.png" alt="icon-versions">
-                    <div>
-                        <h2>Using Abstract</h2>
-                        <p>Abstract lets you manage, version, and document your designs in one place.</p>
-                        <a href="#">Learn More &RightArrow;</a>
+            
+            <div class= "w-auto">
+                <div class="flex gap-6">
+                    <img class="h-24" src="../public/images/icon-versions.png" alt="icon-versions">
+                    <div class="flex flex-col gap-4">
+                        <h2 class="text-2xl w-max font-semibold">Using Abstract</h2>
+                        <p class="text-2xl w-4/5">Abstract lets you manage, version, and document your designs in one place.</p>
+                        <a class="text-xl w-max text-[#4C5FD5] hover:underline" href="#">Learn More &RightArrow;</a>
+                    </div>
+                </div>
+            </div>
+            <div class= "w-auto">
+                <div class="flex gap-6">
+                    <img class="h-24" src="../public/images/icon-account.png" alt="icon-versions">
+                    <div class="flex flex-col gap-4">
+                        <h2 class="text-2xl w-max font-semibold">Manage your account</h2>
+                        <p class="text-2xl w-3/4">Configure your account settings, such as your email, profile details, and password.</p>
+                        <a class="text-xl w-max text-[#4C5FD5] hover:underline" href="#">Learn More &RightArrow;</a>
+                    </div>
+                </div>
+            </div>
+            <div class= "w-auto">
+                <div class="flex gap-6">
+                    <img class="h-24" src="../public/images/icon-organizations.png" alt="icon-versions">
+                    <div class="flex flex-col gap-4">
+                        <h2 class="text-2xl w-max font-semibold">Manage organizations, teams, and projects</h2>
+                        <p class="text-2xl w-3/4">Use Abstract organizations, teams, and projects to organize your people and your work.</p>
+                        <a class="text-xl w-max text-[#4C5FD5] hover:underline" href="#">Learn More &RightArrow;</a>
+                    </div>
+                </div>
+            </div>
+            <div class= "w-auto">
+                <div class="flex gap-6">
+                    <img class="h-24" src="../public/images/icon-billing.png" alt="icon-versions">
+                    <div class="flex flex-col gap-4">
+                        <h2 class="text-2xl w-max font-semibold">Manage billing</h2>
+                        <p class="text-2xl w-3/4">Change subscriptions and payment details.</p>
+                        <a class="text-xl w-max text-[#4C5FD5] hover:underline" href="#">Learn More &RightArrow;</a>
+                    </div>
+                </div>
+            </div>
+            
+            <div class= "w-auto">
+                <div class="flex gap-6">
+                    <img class="h-24" src="../public/images/icon-authenticate.png" alt="icon-versions">
+                    <div class="flex flex-col gap-4">
+                        <h2 class="text-2xl w-max font-semibold">Authenticate to Abstract</h2>
+                        <p class="text-2xl w-3/4">Set up and configure SSO, SCIM, and Just-in-Time provisioning.</p>
+                        <a class="text-xl w-max text-[#4C5FD5] hover:underline" href="#">Learn More &RightArrow;</a>
+                    </div>
+                </div>
+            </div>
+            <div class= "w-auto">
+                <div class="flex gap-6">
+                    <img class="h-24" src="../public/images/icon-comment.png" alt="icon-versions">
+                    <div class="flex flex-col gap-4">
+                        <h2 class="text-2xl w-max font-semibold">Abstract support</h2>
+                        <p class="text-2xl w-3/4">Get in touch with a human.</p>
+                        <a class="text-xl w-max text-[#4C5FD5] hover:underline" href="#">Learn More &RightArrow;</a>
                     </div>
                 </div>
             </div>
