Add more whitespace in the main section to make it more readable

--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
     </header>
     <main class="flex justify-center content-center py-44 px-48">
         <!-- <div class="flex flex-row flex-wrap w-10/12"> -->
-        <div class="grid grid-cols-2 gap-y-20 gap-x-24">
+        <div class="grid grid-cols-2 gap-y-32 gap-x-24">
 
             
             <div class= "w-auto">
@@ -42,7 +42,7 @@
                     <img class="h-24" src="../public/images/icon-versions.png" alt="icon-versions">
                     <div class="flex flex-col gap-4">
                         <h2 class="text-2xl w-max font-semibold">Using Abstract</h2>
-                        <p class="text-2xl w-4/5">Abstract lets you manage, version, and document your designs in one place.</p>
+                        <p class="text-2xl w-auto">Abstract lets you manage, version, and document your designs in one place.</p>
                         <a class="text-xl w-max text-[#4C5FD5] hover:underline" href="#">Learn More &RightArrow;</a>
                     </div>
                 </div>
@@ -52,7 +52,7 @@
                     <img class="h-24" src="../public/images/icon-account.png" alt="icon-versions">
                     <div class="flex flex-col gap-4">
                         <h2 class="text-2xl w-max font-semibold">Manage your account</h2>
-                        <p class="text-2xl w-3/4">Configure your account settings, such as your email, profile details, and password.</p>
+                        <p class="text-2xl w-auto">Configure your account settings, such as your email, profile details, and password.</p>
                         <a class="text-xl w-max text-[#4C5FD5] hover:underline" href="#">Learn More &RightArrow;</a>
                     </div>
                 </div>
@@ -62,7 +62,7 @@
                     <img class="h-24" src="../public/images/icon-organizations.png" alt="icon-versions">
                     <div class="flex flex-col gap-4">
                         <h2 class="text-2xl w-max font-semibold">Manage organizations, teams, and projects</h2>
-                        <p class="text-2xl w-3/4">Use Abstract organizations, teams, and projects to organize your people and your work.</p>
+                        <p class="text-2xl w-auto">Use Abstract organizations, teams, and projects to organize your people and your work.</p>
                         <a class="text-xl w-max text-[#4C5FD5] hover:underline" href="#">Learn More &RightArrow;</a>
                     </div>
                 </div>
@@ -72,7 +72,7 @@
                     <img class="h-24" src="../public/images/icon-billing.png" alt="icon-versions">
                     <div class="flex flex-col gap-4">
                         <h2 class="text-2xl w-max font-semibold">Manage billing</h2>
-                        <p class="text-2xl w-3/4">Change subscriptions and payment details.</p>
+                        <p class="text-2xl w-auto">Change subscriptions and payment details.</p>
                         <a class="text-xl w-max text-[#4C5FD5] hover:underline" href="#">Learn More &RightArrow;</a>
                     </div>
                 </div>
@@ -83,7 +83,7 @@
                     <img class="h-24" src="../public/images/icon-authenticate.png" alt="icon-versions">
                     <div class="flex flex-col gap-4">
                         <h2 class="text-2xl w-max font-semibold">Authenticate to Abstract</h2>
-                        <p class="text-2xl w-3/4">Set up and configure SSO, SCIM, and Just-in-Time provisioning.</p>
+                        <p class="text-2xl w-auto">Set up and configure SSO, SCIM, and Just-in-Time provisioning.</p>
                         <a class="text-xl w-max text-[#4C5FD5] hover:underline" href="#">Learn More &RightArrow;</a>
                     </div>
                 </div>
@@ -93,7 +93,7 @@
                     <img class="h-24" src="../public/images/icon-comment.png" alt="icon-versions">
                     <div class="flex flex-col gap-4">
                         <h2 class="text-2xl w-max font-semibold">Abstract support</h2>
-                        <p class="text-2xl w-3/4">Get in touch with a human.</p>
+                        <p class="text-2xl w-auto">Get in touch with a human.</p>
                         <a class="text-xl w-max text-[#4C5FD5] hover:underline" href="#">Learn More &RightArrow;</a>
                     </div>
                 </div>
