Add styles for the footer

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,8 @@
                 <a class="" href="#">Help Center</a>
             </div>
             <div class="flex gap-6">
-                <button class="text-xl border-white border-2 rounded-lg p-3 text-white bg-gray-900">Submit a request</button>
+                <button class="text-xl border-white border-2 rounded-lg p-3 text-white bg-gray-900">Submit a
+                    request</button>
                 <button class="text-xl rounded-lg p-3 text-white bg-blue-900">Sign in</button>
             </div>
         </nav>
@@ -28,7 +29,8 @@
         <div class="h-96 p-28 flex gap-12 flex-col bg-[#dadbf1]">
             <h1 class="text-7xl text-center">How can we help?</h1>
             <div class="text-center">
-                <input class="p-4 w-2/5 border-blue-900 border-2 rounded-lg" type="text" name="help-text" id="" placeholder="Search">
+                <input class="p-4 w-2/5 border-blue-900 border-2 rounded-lg" type="text" name="help-text" id=""
+                    placeholder="Search">
             </div>
         </div>
     </header>
@@ -36,38 +38,41 @@
         <!-- <div class="flex flex-row flex-wrap w-10/12"> -->
         <div class="grid grid-cols-2 gap-y-32 gap-x-24">
 
-            
-            <div class= "w-auto">
+
+            <div class="w-auto">
                 <div class="flex gap-6">
                     <img class="h-24" src="../public/images/icon-versions.png" alt="icon-versions">
                     <div class="flex flex-col gap-4">
                         <h2 class="text-2xl w-max font-semibold">Using Abstract</h2>
-                        <p class="text-2xl w-auto">Abstract lets you manage, version, and document your designs in one place.</p>
+                        <p class="text-2xl w-auto">Abstract lets you manage, version, and document your designs in one
+                            place.</p>
                         <a class="text-xl w-max text-[#4C5FD5] hover:underline" href="#">Learn More &RightArrow;</a>
                     </div>
                 </div>
             </div>
-            <div class= "w-auto">
+            <div class="w-auto">
                 <div class="flex gap-6">
                     <img class="h-24" src="../public/images/icon-account.png" alt="icon-versions">
                     <div class="flex flex-col gap-4">
                         <h2 class="text-2xl w-max font-semibold">Manage your account</h2>
-                        <p class="text-2xl w-auto">Configure your account settings, such as your email, profile details, and password.</p>
+                        <p class="text-2xl w-auto">Configure your account settings, such as your email, profile details,
+                            and password.</p>
                         <a class="text-xl w-max text-[#4C5FD5] hover:underline" href="#">Learn More &RightArrow;</a>
                     </div>
                 </div>
             </div>
-            <div class= "w-auto">
+            <div class="w-auto">
                 <div class="flex gap-6">
                     <img class="h-24" src="../public/images/icon-organizations.png" alt="icon-versions">
                     <div class="flex flex-col gap-4">
                         <h2 class="text-2xl w-max font-semibold">Manage organizations, teams, and projects</h2>
-                        <p class="text-2xl w-auto">Use Abstract organizations, teams, and projects to organize your people and your work.</p>
+                        <p class="text-2xl w-auto">Use Abstract organizations, teams, and projects to organize your
+                            people and your work.</p>
                         <a class="text-xl w-max text-[#4C5FD5] hover:underline" href="#">Learn More &RightArrow;</a>
                     </div>
                 </div>
             </div>
-            <div class= "w-auto">
+            <div class="w-auto">
                 <div class="flex gap-6">
                     <img class="h-24" src="../public/images/icon-billing.png" alt="icon-versions">
                     <div class="flex flex-col gap-4">
@@ -77,8 +82,8 @@
                     </div>
                 </div>
             </div>
-            
-            <div class= "w-auto">
+
+            <div class="w-auto">
                 <div class="flex gap-6">
                     <img class="h-24" src="../public/images/icon-authenticate.png" alt="icon-versions">
                     <div class="flex flex-col gap-4">
@@ -88,7 +93,7 @@
                     </div>
                 </div>
             </div>
-            <div class= "w-auto">
+            <div class="w-auto">
                 <div class="flex gap-6">
                     <img class="h-24" src="../public/images/icon-comment.png" alt="icon-versions">
                     <div class="flex flex-col gap-4">
@@ -100,37 +105,58 @@
             </div>
         </div>
     </main>
-    <footer>
-        <div>
-            <h3>Abstract</h3>
-            <a href="#">Start Trial</a>
-            <a href="#">Pricing</a>
-            <a href="#">Download</a>
+    <footer class="text-white bg-black flex flex-row justify-between py-16 px-32 h-96">
+        <div class="flex flex-col gap-2">
+            <h3 class="text-2xl font-bold">Abstract</h3>
+            <div class="flex flex-col">
+                <a href="#">Start Trial</a>
+                <a href="#">Pricing</a>
+                <a href="#">Download</a>
+            </div>
         </div>
-        <div>
-            <h3>Abstract</h3>
-            <a href="#">Start Trial</a>
-            <a href="#">Pricing</a>
-            <a href="#">Download</a>
-            <h3>Contact Us</h3>
-            <a href="#">info@abstract.com</a>
+        <div class="flex flex-col gap-2">
+            <h3 class="text-2xl font-bold">Resources</h3>
+            <div class="flex flex-col">
+                <a href="#">Blog</a>
+                <a href="#">Help Center</a>
+                <a href="#">Release notes</a>
+                <a href="#">Status</a>
+            </div>
         </div>
-        <div>
-            <img src="../public/images/abstract.svg" alt="abstract">
+        <div class="flex flex-col gap-2">
+            <h3 class="text-2xl font-bold">Community</h3>
+            <div class="flex flex-col">
+                <a href="#">Twitter</a>
+                <a href="#">LinkedIn</a>
+                <a href="#">Facebook</a>
+                <a href="#">Dribble</a>
+                <a href="#">Podcast</a>
+            </div>
+        </div>
+        <div class="flex flex-col gap-8">
+            <div>
+                <h3 class="text-2xl font-bold">Company</h3>
+                <div class="flex flex-col">
+                    <a href="#">About Us</a>
+                    <a href="#">Careers</a>
+                    <a href="#">Legal</a>
+                </div>
+            </div>
+            <div>
+                <h3 class="text-lg font-bold">Contact Us</h3>
+                <a href="#">info@abstract.com</a>
+            </div>
+        </div>
+        <div class="self-end text-lg">
+            <img class="py-4" src="../public/images/favicon.png" alt="abstract">
             <p>&copy; Copyright 2024</p>
             <p>Abstract Studio Design, Inc.</p>
             <p>All rights reserved</p>
         </div>
-        <button>
-            <!-- <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
-                style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;">
-                <path
-                    d="M12 4C9.243 4 7 6.243 7 9h2c0-1.654 1.346-3 3-3s3 1.346 3 3c0 1.069-.454 1.465-1.481 2.255-.382.294-.813.626-1.226 1.038C10.981 13.604 10.995 14.897 11 15v2h2v-2.009c0-.024.023-.601.707-1.284.32-.32.682-.598 1.031-.867C15.798 12.024 17 11.1 17 9c0-2.757-2.243-5-5-5zm-1 14h2v2h-2z">
-                </path>
-            </svg> -->
-            Help
-        </button>
     </footer>
+    <button class="fixed bottom-4 right-4 font-bold text-white bg-blue-900 w-28 h-12 rounded-3xl">
+        Help
+    </button>
 </body>
 
 </html>
