--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
             <h1 class="text-7xl text-center">How can we help?</h1>
             <div class="text-center">
                 <input class="p-4 w-2/5 border-blue-900 border-2 rounded-lg" type="text" name="help-text" id=""
-                    placeholder="Search">
+                    placeholder="Search" autocomplete="off">
             </div>
         </div>
     </header>
@@ -109,42 +109,42 @@
         <div class="flex flex-col gap-2">
             <h3 class="text-2xl font-bold">Abstract</h3>
             <div class="flex flex-col">
-                <a href="#">Start Trial</a>
-                <a href="#">Pricing</a>
-                <a href="#">Download</a>
+                <a class="hover:underline" href="#">Start Trial</a>
+                <a class="hover:underline" href="#">Pricing</a>
+                <a class="hover:underline" href="#">Download</a>
             </div>
         </div>
         <div class="flex flex-col gap-2">
             <h3 class="text-2xl font-bold">Resources</h3>
             <div class="flex flex-col">
-                <a href="#">Blog</a>
-                <a href="#">Help Center</a>
-                <a href="#">Release notes</a>
-                <a href="#">Status</a>
+                <a class="hover:underline" href="#">Blog</a>
+                <a class="hover:underline" href="#">Help Center</a>
+                <a class="hover:underline" href="#">Release notes</a>
+                <a class="hover:underline" href="#">Status</a>
             </div>
         </div>
         <div class="flex flex-col gap-2">
             <h3 class="text-2xl font-bold">Community</h3>
             <div class="flex flex-col">
-                <a href="#">Twitter</a>
-                <a href="#">LinkedIn</a>
-                <a href="#">Facebook</a>
-                <a href="#">Dribble</a>
-                <a href="#">Podcast</a>
+                <a class="hover:underline" href="#">Twitter</a>
+                <a class="hover:underline" href="#">LinkedIn</a>
+                <a class="hover:underline" href="#">Facebook</a>
+                <a class="hover:underline" href="#">Dribble</a>
+                <a class="hover:underline" href="#">Podcast</a>
             </div>
         </div>
         <div class="flex flex-col gap-8">
             <div>
                 <h3 class="text-2xl font-bold">Company</h3>
                 <div class="flex flex-col">
-                    <a href="#">About Us</a>
-                    <a href="#">Careers</a>
-                    <a href="#">Legal</a>
+                    <a class="hover:underline" href="#">About Us</a>
+                    <a class="hover:underline" href="#">Careers</a>
+                    <a class="hover:underline" href="#">Legal</a>
                 </div>
             </div>
             <div>
                 <h3 class="text-lg font-bold">Contact Us</h3>
-                <a href="#">info@abstract.com</a>
+                <a class="hover:underline" href="#">info@abstract.com</a>
             </div>
         </div>
         <div class="self-end text-lg">
