--- a/src/index.html
+++ b/src/index.html
@@ -11,23 +11,28 @@
 
 <body>
     <header>
-        <nav class="py-4 px-32  bg-black flex justify-between">
+        <nav class="py-4 px-32  bg-black flex justify-between items-center">
             <div class="text-xl text-white flex flex-row items-center gap-2">
                 <img class="h-8 w-32" src="../public/images/abstract.svg" alt="abstract">
                 |
                 <a class="" href="#">Help Center</a>
             </div>
-            <div class="flex gap-6">
+            <!-- <div class="flex gap-6">
                 <button class="text-xl border-white border-2 rounded-lg p-3 text-white bg-gray-900">Submit a
                     request</button>
                 <button class="text-xl rounded-lg p-3 text-white bg-blue-900">Sign in</button>
-            </div>
+            </div> -->
+            <button class="hamburger flex flex-col gap-1">
+                <span class="bar ease-in-out duration-300 bg-white w-6 h-1"></span>
+                <span class="bar ease-in-out duration-300 bg-white w-6 h-1"></span>
+                <span class="bar ease-in-out duration-300 bg-white w-6 h-1"></span>
+            </button>
         </nav>
 
 
         <!-- Hero Section -->
         <div class="h-96 p-28 flex gap-12 flex-col bg-[#dadbf1]">
-            <h1 class="text-7xl text-center">How can we help?</h1>
+            <h1 class="text-7xl text-center sm:text-8xl">How can we help?</h1>
             <div class="text-center">
                 <input class="p-4 w-2/5 border-blue-900 border-2 rounded-lg" type="text" name="help-text" id=""
                     placeholder="Search" autocomplete="off">
