--- a/src/index.htm
+++ b/src/index.htm
@@ -10,7 +10,7 @@
     <!-- sm and xl for the navbar  -->
     <!-- md for the features flex wrap -->
     <!-- lg for the footer sections flex wrap -->
-    <!-- Commons : 320, 480, 770, 1025, 1200 -->
+    <!-- Commons : 320 (smallest), 480, 770, 1025, 1200 -->
 </head>
 
 <body>
@@ -81,68 +81,53 @@
             </div>
         </div>
     </header>
-    <main class="px-12 py-40 grid grid-cols-1 gap-y-24 md:grid-cols-2 md:px-36">
-        <div class="w-full">
-            <div class="flex gap-6">
-                <img class="h-20" src="../public/images/icon-versions.png" alt="icon-versions">
-                <div class="flex flex-col gap-4">
-                    <h2 class="text-2xl w-max font-semibold">Using Abstract</h2>
-                    <p class="text-2xl w-auto">Abstract lets you manage, version, and document your designs in one
-                        place.</p>
-                    <a class="text-xl w-max text-[#4C5FD5] hover:underline" href="#">Learn More &RightArrow;</a>
-                </div>
+    <main class="px-8 py-36 grid grid-cols-1 gap-y-24 md:gap-x-8 md:grid-cols-2 xl:px-44 xl:gap-x-8">
+        <div class="flex gap-4">
+            <img class="h-16 md:h-20" src="../public/images/icon-versions.png" alt="icon-versions">
+            <div class="flex flex-col gap-4 text-2xl">
+                <h2 class="font-bold">Using Abstract</h2>
+                <p>Abstract lets you manage, version, and document your designs in one place.</p>
+                <a class="text-lg text-[#4C5FD5] hover:underline" href="#">Learn More &rightarrow;</a>
             </div>
         </div>
-        <div class="w-auto">
-            <div class="flex gap-6">
-                <img class="h-20" src="../public/images/icon-account.png" alt="icon-versions">
-                <div class="flex flex-col gap-4">
-                    <h2 class="text-2xl w-max font-semibold">Manage your account</h2>
-                    <p class="text-2xl w-auto">Configure your account settings, such as your email, profile details, and
-                        password.</p>
-                    <a class="text-xl w-max text-[#4C5FD5] hover:underline" href="#">Learn More &RightArrow;</a>
-                </div>
+        <div class="flex gap-4">
+            <img class="h-16 md:h-20" src="../public/images/icon-account.png" alt="icon-account">
+            <div class="flex flex-col gap-4 text-2xl">
+                <h2 class="font-bold">Manage your account</h2>
+                <p>Configure your account settings, such as your email, profile details, and password.</p>
+                <a class="text-lg text-[#4C5FD5] hover:underline" href="#">Learn More &rightarrow;</a>
             </div>
         </div>
-        <div class="w-full">
-            <div class="flex gap-6">
-                <img class="h-20" src="../public/images/icon-organizations.png" alt="icon-versions">
-                <div class="flex flex-col gap-4">
-                    <h2 class="text-2xl w-max font-semibold">Manage organizations, teams, and projects</h2>
-                    <p class="text-2xl w-auto">Use Abstract organizations, teams, and projects to organize your people
-                        and your work.</p>
-                    <a class="text-xl w-max text-[#4C5FD5] hover:underline" href="#">Learn More &RightArrow;</a>
-                </div>
+        <div class="flex gap-4">
+            <img class="h-16 md:h-20" src="../public/images/icon-organizations.png" alt="icon-versions">
+            <div class="flex flex-col gap-4 text-2xl">
+                <h2 class="font-bold">Manage organizations, teams, and projects</h2>
+                <p>Use Abstract organizations, teams, and projects to organize your people and your work.</p>
+                <a class="text-lg text-[#4C5FD5] hover:underline" href="#">Learn More &rightarrow;</a>
             </div>
         </div>
-        <div class="w-auto">
-            <div class="flex gap-6">
-                <img class="h-20" src="../public/images/icon-billing.png" alt="icon-versions">
-                <div class="flex flex-col gap-4">
-                    <h2 class="text-2xl w-max font-semibold">Manage billing</h2>
-                    <p class="text-2xl w-auto">Change subscriptions and payment details.</p>
-                    <a class="text-xl w-max text-[#4C5FD5] hover:underline" href="#">Learn More &RightArrow;</a>
-                </div>
+        <div class="flex gap-4">
+            <img class="h-16 md:h-20" src="../public/images/icon-billing.png" alt="icon-versions">
+            <div class="flex flex-col gap-4 text-2xl">
+                <h2 class="font-bold">Manage billing</h2>
+                <p>Change subscriptions and payment details.</p>
+                <a class="text-lg text-[#4C5FD5] hover:underline" href="#">Learn More &rightarrow;</a>
             </div>
         </div>
-        <div class="w-auto">
-            <div class="flex gap-6">
-                <img class="h-20" src="../public/images/icon-authenticate.png" alt="icon-versions">
-                <div class="flex flex-col gap-4">
-                    <h2 class="text-2xl w-max font-semibold">Authenticate to Abstract</h2>
-                    <p class="text-2xl w-auto">Set up and configure SSO, SCIM, and Just-in-Time provisioning.</p>
-                    <a class="text-xl w-max text-[#4C5FD5] hover:underline" href="#">Learn More &RightArrow;</a>
-                </div>
+        <div class="flex gap-4">
+            <img class="h-16 md:h-20" src="../public/images/icon-authenticate.png" alt="icon-versions">
+            <div class="flex flex-col gap-4 text-2xl">
+                <h2 class="font-bold">Authenticate to Abstract</h2>
+                <p>Set up and configure SSO, SCIM, and Just-in-Time provisioning.</p>
+                <a class="text-lg text-[#4C5FD5] hover:underline" href="#">Learn More &rightarrow;</a>
             </div>
         </div>
-        <div class="w-auto">
-            <div class="flex gap-6">
-                <img class="h-20" src="../public/images/icon-comment.png" alt="icon-versions">
-                <div class="flex flex-col gap-4">
-                    <h2 class="text-2xl w-max font-semibold">Abstract support</h2>
-                    <p class="text-2xl w-auto">Get in touch with a human.</p>
-                    <a class="text-xl w-max text-[#4C5FD5] hover:underline" href="#">Learn More &RightArrow;</a>
-                </div>
+        <div class="flex gap-4">
+            <img class="h-16 md:h-20" src="../public/images/icon-comment.png" alt="icon-versions">
+            <div class="flex flex-col gap-4 text-2xl">
+                <h2 class="font-bold">Abstract support</h2>
+                <p>Get in touch with a human.</p>
+                <a class="text-lg text-[#4C5FD5] hover:underline" href="#">Learn More &rightarrow;</a>
             </div>
         </div>
     </main>
