Fix settings for vercel deployment

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abstract</title>
-    <link rel="shortcut icon" href="../public/images/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="./output.css">
+    <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="./css/output.css">
     <!-- sm and xl for the navbar  -->
     <!-- md for the features flex wrap -->
     <!-- lg for the footer sections flex wrap -->
@@ -17,7 +17,7 @@
     <header>
         <nav class="navbar bg-black text-white py-4 px-14">
             <div class="flex items-center text-2xl gap-2">
-                <!-- <img class="w-36" src="../public/images/abstract.svg" alt="abstract-icon"> -->
+                <!-- <img class="w-36" src="./images/abstract.svg" alt="abstract-icon"> -->
                 <svg class="w-32" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 51"
                     preserveAspectRatio="xMinYMid slice">
                     <g class="abstract-logo-mark" fill="#fff">
@@ -83,7 +83,7 @@
     </header>
     <main class="px-8 py-36 grid grid-cols-1 gap-y-24 md:gap-x-8 md:grid-cols-2 xl:px-44 xl:gap-x-8">
         <div class="flex gap-4">
-            <img class="h-16 md:h-20" src="../public/images/icon-versions.png" alt="icon-versions">
+            <img class="h-16 md:h-20" src="./images/icon-versions.png" alt="icon-versions">
             <div class="flex flex-col gap-4 text-2xl">
                 <h2 class="font-bold">Using Abstract</h2>
                 <p>Abstract lets you manage, version, and document your designs in one place.</p>
@@ -91,7 +91,7 @@
             </div>
         </div>
         <div class="flex gap-4">
-            <img class="h-16 md:h-20" src="../public/images/icon-account.png" alt="icon-account">
+            <img class="h-16 md:h-20" src="./images/icon-account.png" alt="icon-account">
             <div class="flex flex-col gap-4 text-2xl">
                 <h2 class="font-bold">Manage your account</h2>
                 <p>Configure your account settings, such as your email, profile details, and password.</p>
@@ -99,7 +99,7 @@
             </div>
         </div>
         <div class="flex gap-4">
-            <img class="h-16 md:h-20" src="../public/images/icon-organizations.png" alt="icon-versions">
+            <img class="h-16 md:h-20" src="./images/icon-organizations.png" alt="icon-versions">
             <div class="flex flex-col gap-4 text-2xl">
                 <h2 class="font-bold">Manage organizations, teams, and projects</h2>
                 <p>Use Abstract organizations, teams, and projects to organize your people and your work.</p>
@@ -107,7 +107,7 @@
             </div>
         </div>
         <div class="flex gap-4">
-            <img class="h-16 md:h-20" src="../public/images/icon-billing.png" alt="icon-versions">
+            <img class="h-16 md:h-20" src="./images/icon-billing.png" alt="icon-versions">
             <div class="flex flex-col gap-4 text-2xl">
                 <h2 class="font-bold">Manage billing</h2>
                 <p>Change subscriptions and payment details.</p>
@@ -115,7 +115,7 @@
             </div>
         </div>
         <div class="flex gap-4">
-            <img class="h-16 md:h-20" src="../public/images/icon-authenticate.png" alt="icon-versions">
+            <img class="h-16 md:h-20" src="./images/icon-authenticate.png" alt="icon-versions">
             <div class="flex flex-col gap-4 text-2xl">
                 <h2 class="font-bold">Authenticate to Abstract</h2>
                 <p>Set up and configure SSO, SCIM, and Just-in-Time provisioning.</p>
@@ -123,7 +123,7 @@
             </div>
         </div>
         <div class="flex gap-4">
-            <img class="h-16 md:h-20" src="../public/images/icon-comment.png" alt="icon-versions">
+            <img class="h-16 md:h-20" src="./images/icon-comment.png" alt="icon-versions">
             <div class="flex flex-col gap-4 text-2xl">
                 <h2 class="font-bold">Abstract support</h2>
                 <p>Get in touch with a human.</p>
@@ -178,7 +178,7 @@
             </div>
         </div>
         <div class="self-start text-lg sm:self-end">
-            <img class="py-4" src="../public/images/favicon.png" alt="abstract">
+            <img class="py-4" src="./images/favicon.png" alt="abstract">
             <p>&copy; Copyright 2024</p>
             <p>Abstract Studio Design, Inc.</p>
             <p>All rights reserved</p>
